w3_band/assets/css/style.css
/* Reset CSS */
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

html {
    font-family: Arial, Helvetica, sans-serif;
}
/*
    1. Từ ngoài vào trong
    2. Từ trên xuống dưới
    3. Tổng quan đến chi tiết
*/

/*
    1. Vị trí
    2. Kích thước (width, height)
    3. Màu sắc
    4. Kiểu dáng (kiểu chữ, hình tròn, vuông, ...)
*/
.clear {
    clear: both;
}

.text-white {
    color: #fff !important;
}

#main {

}

#header {
    height: 46px;
    background-color: #000;
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    z-index: 1;
}

#nav {
    display: inline-block;
}

#nav, .subnav {
    list-style-type: none;
}

#nav > li {
    display: inline-block;
}

#nav li {
    position: relative;
}

#nav > li > a {
    color: #fff;
    text-transform: uppercase;
}

#nav li a {
    text-decoration: none;
    line-height: 46px;
    padding: 0 24px;
    display: block;
}

#nav li:hover .subnav {
    display: block;
}

#nav > li:hover > a,
#nav .subnav li:hover a {
    color: #000 !important;
    background-color: #ccc !important;
}

#nav .subnav {
    display: none;
    min-width: 160px;
    position: absolute;
    top: 100%;
    left: 0;
    background-color: #fff;
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
}

#nav .subnav a {
    color: #000;
    padding: 0 12px;
    line-height: 38px;
}

#nav .nav-arrow-down {
    font-size: 14px;
}

#header .search-btn {
    float: right;
    padding: 0 21px;
}

#header .search-btn:hover {
    background-color: #f44336!important;
    cursor: pointer;
}

#header .search-icon {
    color: #fff;
    font-size: 20px;
    line-height: 46px;
}

#slider {
    position: relative;
    margin-top: 46px;
    padding-top: 50%;
    background: url('../img/slider1.jpg') top center / cover no-repeat;
}

#slider .text-content {
    position: absolute;
    bottom: 47px;
    color: #fff;
    left: 50%;
    transform: translateX(-50%);
    text-align: center;
    /* Cách 2
    width: 100%; */
    /* Cách 3
    left: 0;
    right: 0; */
}

#slider .text-heading {
    font-weight: 500;
    font-size: 24px;
}

#slider .text-description {
    font-size: 15px;
    margin-top: 25px;
}

#content {

}

#content .content-section {
    width: 800px;
    margin-left: auto;
    margin-right: auto;
    padding: 64px 0;
}

#content .section-heading {
    text-align: center;
    font-size: 30px;
    font-weight: 500;
    letter-spacing: 4px;
}

#content .section-sub-heading {
    text-align: center;
    font-size: 15px;
    margin-top: 25px;
    font-style: italic;
    opacity: 0.6;
}

#content .about-text {
    margin-top: 25px;
    font-size: 15px;
    text-align: justify;
    line-height: 1.4; /* tiếng Anh */
    /* line-height: 1.6; tiếng Việt */
}

#content .members-list {
    margin-top: 48px;
}

#content .member-item {
    float: left;
    width: calc(100% / 3);
    text-align: center;
}

#content .member-name {
    font-size: 15px;
}

#content .member-img {
    margin-top: 15px;
    width: 154px;
    border-radius: 4px;
}

/* Tour Section */
.tour-section {
    background-color: #000;
    padding-bottom: 48px;
}

/* Tickets */
.tickets-list {
    list-style: none;
    background-color: #fff;
    margin-top: 40px;
}

.tickets-list li {
    font-size: 15px;
    padding: 11px 16px;
    border: 1px solid #ddd;
    color: #757575;
}

.tickets-list .sold-out {
    background-color: #f44336;
    color: #fff;
    padding: 3px 8px;
    margin-left: 16px;
}

.tickets-list .quantity {
    float: right;
    width: 24px;
    height: 24px;
    background: #000;
    color: #fff;
    border-radius: 50%;
    text-align: center;
    line-height: 24px;
    margin-top: -3px;
}

/* Places */
.places-list {
    margin: 32px -8px 0;
}

.place-item {
    float: left;
    width: calc(100% / 3);
    padding: 0 8px;
}

.place-img {
    width: 100%;
    display: block;
}

.place-img:hover {
    opacity: 0.6;
}

.place-body {
    background-color: #fff;
    padding: 16px;
    font-size: 15px;
}

.place-heading {
    font-size: 15px;
    font-weight: 600;
}

.place-time {
    margin-top: 15px;
    color: #757575;
}

.place-desc {
    margin-top: 15px;
    line-height: 1.4;
}

.place-buy-btn {
    background-color: #000;
    color: #fff;
    text-decoration: none;
    padding: 11px 16px;
    display: inline-block;
    margin-top: 15px;
    border: none;
}

.place-buy-btn:hover {
    color: #000;
    background-color: #ccc;
    cursor: pointer;
}

/* Footer Section */
#footer {

}

.modal {
    position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    background-color: rgba(0, 0, 0, 0.4);
    display: none;
    align-items: center;
    justify-content: center;
}

.modal.open {
    display: flex;
}

.modal-container {
    width: 900px;
    background-color: #fff;
    min-height: 200px;
    position: relative;
    max-width: calc(100% - 32px);
    animation: modalFadeIn ease 0.5s;
}

.modal-header {
    background-color: #009688 !important;
    height: 129px;
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 30px;
    color: #fff;
}

.modal-heading-icon {
    padding: 16px;
}

.modal-close:hover {
    color: #000 !important;
    background-color: #ccc !important;
}

.modal-close {
    position: absolute;
    top: 0;
    right: 0;
    padding: 12px;
    color: #fff;
    cursor: pointer;
    opacity: 0.8;
}

.modal-body {
    padding: 16px;
}

.modal-label {
    display: block;
    font-size: 15px;
    margin-bottom: 12px;
}

.modal-input {
    width: 100%;
    border: 1px solid #ccc;
    padding: 10px;
    font-size: 15px;
    margin-bottom: 24px;
}

#buy-tickets:hover {
    color: #000;
    background-color: #ccc;
}

#buy-tickets {
    background-color: #009688;
    padding: 18px;
    width: 100%;
    cursor: pointer;
    color: #fff;
    text-transform: uppercase;
    border: none;
    font-size: 15px;
}

.modal-footer {
    padding: 16px;
    text-align: right;
}

.modal-footer a {
    color: #2196F3;
}

@keyframes modalFadeIn {
    /* trượt từ trên (vị trí -200px) xuống vị trí ban đầu, từ mờ ảo đến rõ ràng (opacity) */
    from {
        opacity: 0;
        transform: translateY(-1000px);
    }
    to {
        opacity: 1;
        transform: translateY(0);
    }
}

